packages/legacy-workbench/src/css/ttyg/agent-list.css
.agent-list-component {
    display: flex;
    flex-direction: column;
    height: 100%;
    clip: rect(0, auto, auto, 0);
}

.agent-list-component .agent-list {
    margin-top: 1rem;
    height: 75vh;
    max-height: 75vh;
    overflow-y: hidden;
    scrollbar-gutter: stable;
}

.agent-list-component:hover .agent-list {
    overflow-y: auto;
}

.agent-list-component .agents-filter-dropdown {
    width: 100%;
}

/* Reset the dropdown toggle button styles to make it look more like an input */
.agent-list-component .agents-filter-dropdown .dropdown-toggle {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-weight: unset;
    color: inherit;
    border-color: var(--gw-neutral-base);
}

.agent-list-component .agents-filter-dropdown .dropdown-toggle .selected-filter {
    flex-grow: 1;
    text-align: left;
}

.agent-list-component .agents-filter-dropdown .dropdown-toggle:hover {
    background-color: #fff;
}

.agent-list-component .agents-filter-dropdown .dropdown-toggle:after {
    display: none;
}

.agent-list-component .agent-item {
    padding: 6px 8px;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.agent-list-component .agent-item.selected {
    background-color: var(--base-background-selected-color);
}

.agent-list-component .agent-item .agent-info {
    display: flex;
    flex-direction: row;
    width: 100%;
}

.agent-list-component .agent-item:hover {
    background-color: var(--base-background-hover-color);
    cursor: pointer;
}

.agent-list-component .agent-item .repository-model-group {
    display: flex;
    justify-content: space-between;
}

.agent-list-component .agent-item .repository-model-group .related-repository,
.agent-list-component .agent-item .repository-model-group .model-name {
    color: var(--gw-neutral-dark);
}

.agent-list-component .agent-item .agent-name {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
}

.agent-list-component .agent-item .agent-name a {
    text-decoration: none;
    color: unset;
}

.agent-list-component .agent-item .btn-group {
    display: flex;
    align-self: start;
    margin-top: 4px;
}

.agent-list-component .agent-item .btn-group .agent-actions-menu {
    margin-top: 4px;
}

.agent-list-component .agent-item .btn-group .dropdown-item span {
    margin-left: 8px;
}

.agent-list-component .agent-item .open-agent-actions-btn {
    display: none;
}

.agent-list-component .agent-item:not(.edited):hover .open-agent-actions-btn {
    display: block;
}

.agent-list-component .deleting-agent-loader {
    display: flex;
    align-items: center;
    width: 100%;
    height: 60px;
    padding: 6px 8px;
    background-color: #00000066;
    color: #fff;
}

.agent-list-component .selected-filter, .agent-list-component .agent-name {
    color: var(--gw-secondary-base);
    font-weight: 400;
}

.agent-list-component .agent-name.incompatible-agent {
    color: var(--gw-neutral-dark);
}

